--- a/src/app/pages/autentificacion/recuperar-psw/recuperar-psw.page.html
+++ b/src/app/pages/autentificacion/recuperar-psw/recuperar-psw.page.html
@@ -1,21 +1,16 @@
-<ion-header>
-  <ion-toolbar [translucent]="true">
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
-<ion-content class="ion-padding ion-text-center">
 
- 
+<ion-content class="ion-padding ion-text-center">
   <ion-item  lines="none" class="ion-text-center ion-text-custom">
-    <ion-label>recuperar contraseña</ion-label>
+    <ion-label>{{ "recuperar" | translate }} {{ "contraseña" | translate }}</ion-label>
   </ion-item>
   <ion-item >
-    <ion-label color="duoc" class="email-label"  position="floating">correo</ion-label>
-    <ion-input inputmode="email" [(ngModel)]="correo"></ion-input>
+    <ion-label color="duoc" class="email-label"  position="floating">{{ "correo" | translate }}: </ion-label>
+    <ion-input inputmode="email"></ion-input>
   </ion-item>
   <ion-button (click)="modificarPasslink()" class="recup-buttom" color="duoc"  expand="block"  shape="round">
-    recuperar
+    {{ "recuperar" | translate }}
+  </ion-button>
+  <ion-button class="repass-buttom" color="duoc" fill="outline" expand="full" shape="round" routerLink="/login">
+    {{ "volver" | translate }}
   </ion-button>
 </ion-content>
