--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,12 +1,12 @@
 <ion-menu contentId="main-content" side="end">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Menu</ion-title>
+      <ion-title>{{ "Menu" | translate }}</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">
     <ion-item lines="full" routerLink="/home/perfil-usuario">
-      <ion-label>Mi Perfil</ion-label>
+      <ion-label>{{ "mi perfil" | translate }}</ion-label>
       <ion-icon slot="start" name="person-circle-outline"></ion-icon>
     </ion-item>
     <ion-item
@@ -14,19 +14,17 @@
       *ngIf="usuario && usuario.tipo=='admin'"
       routerLink="/admin-seccion"
     >
-      <ion-label>administracion secciones</ion-label>
+      <ion-label>{{ "administracion secciones" | translate }}</ion-label>
       <ion-icon slot="start" name="attach-outline"></ion-icon>
     </ion-item>
-    <ion-item
-      lines="full"
-      *ngIf="usuario && usuario.tipo=='admin'"
-      routerLink="/admin-user"
-    >
-      <ion-label>administracion usuarios</ion-label>
-      <ion-icon slot="start" name="accessibility-outline"></ion-icon>
+    <ion-item class="select">
+      <ion-label>{{ "selecciona" | translate }}</ion-label>
+      <ion-select cancelText="Cancel" [(ngModel)]="idioma" placeholder="Selecciona" (ionChange)="changeLang($event)">
+        <ion-select-option *ngFor="let lang of langs">{{ lang }}</ion-select-option>
+      </ion-select>
     </ion-item>
     <ion-item (click)="logOut()" lines="full">
-      <ion-label>Cerrar sesion</ion-label>
+      <ion-label>{{ "cerrar sesion" | translate }}</ion-label>
       <ion-icon slot="start" name="log-out-outline"></ion-icon>
     </ion-item>
   </ion-content>
@@ -37,14 +35,14 @@
       <ion-buttons slot="end">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title>home</ion-title>
+      <ion-title>{{ "inicio" | translate }}</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-content-big">
     <div id="container ion-align-items-start">
       <div class="i-content ion-justify-content-center">
         <div class="i-content-div ion-justify-content-center">
-          <h3 class="ion-padding-horizontal" *ngIf="usuario">Bienvenido: {{ usuario.nombre }}</h3>
+          <h3 class="ion-padding-horizontal" *ngIf="usuario">{{ "bienvenido" | translate }}: {{ usuario.nombre }}</h3>
           <ion-item lines="none" *ngFor="let aux of secciones" [routerLink]="['/home', aux.id]" >
             <ion-card color="secondary" class="tarjeta-materias">
               <ion-card-header>
@@ -55,8 +53,8 @@
               <ion-card-content>
                 <ion-item color="tertiary" lines="none">
                   <ion-label>
-                    <p>N° Alumnos: {{ aux.num_alumnos }}</p>
-                    <p>Profesor: {{aux.profesor.nombre}}</p>
+                    <p>{{ "N° alumnos" | translate }}: {{ aux.num_alumnos }}</p>
+                    <p>{{ "profesor" | translate }}: {{aux.profesor.nombre}}</p>
                   </ion-label>
                 </ion-item>
               </ion-card-content>
