--- a/src/app/pages/home/detalle-seccion/clase/clase.page.scss
+++ b/src/app/pages/home/detalle-seccion/clase/clase.page.scss
@@ -7,3 +7,21 @@ img{
     min-height: 250px;
 }
 
+ion-modal {
+    --height: 308px;
+    --width: 80%;
+    --padding: 12px;
+    --max-width: 400px;
+    --border-radius: 12px;
+    --box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  }
+  
+  ion-modal::part(backdrop) {
+    background: rgba(209, 213, 219);
+    opacity: 1;
+  }
+  
+  ion-modal ion-toolbar {
+    --background: #002b45;
+    --color: white;
+  }
