--- a/src/app/pages/administracion/admin-seccion/admin-seccion.page.html
+++ b/src/app/pages/administracion/admin-seccion/admin-seccion.page.html
@@ -31,7 +31,7 @@
               <ion-item>
                 <ion-label color="duoc">{{ "alumno" | translate }}: </ion-label>
                 <ion-input placeholder="ingrese id alumno" type="text"  [(ngModel)]="newAlumno"
-                [ngModelOptions]="{standalone: 'true'}"></ion-input>  
+                [ngModelOptions]="{standalone: true}"></ion-input>  
                 <ion-icon color="success" slot="end" name="person-add-outline" (click)="agregarAlumno()"></ion-icon>
               </ion-item>
              <ion-list>
