--- a/src/app/pages/home/detalle-seccion/detalle-seccion.page.html
+++ b/src/app/pages/home/detalle-seccion/detalle-seccion.page.html
@@ -19,15 +19,20 @@
         </ion-card-header>
         <ion-card-content>
           <ion-item color="tertiary" lines="none">
-            <ion-label *ngIf="profesor">{{ "profesor" | translate }}: {{ profesor.nombre }}</ion-label>
+            <ion-label *ngIf="profesor"
+              >{{ "profesor" | translate }}: {{ profesor.nombre }}</ion-label
+            >
           </ion-item>
           <ion-accordion-group>
-            <ion-accordion >
+            <ion-accordion>
               <ion-item lines="full" slot="header" color="light">
                 <ion-label class="">{{ "alumnos" | translate }}: </ion-label>
               </ion-item>
               <div slot="content">
-                <ion-title>{{ "lista" | translate }} {{ "alumnos" | translate }}</ion-title>
+                <ion-title
+                  >{{ "lista" | translate }} {{ "alumnos" | translate
+                  }}</ion-title
+                >
                 <ion-item lines="full" *ngFor="let aux of alumnos">
                   <ion-label>{{ aux.nombre }}</ion-label>
                   <ion-label slot="end">{{aux.rut}}</ion-label>
@@ -39,10 +44,21 @@
       </ion-card>
       <ion-card>
         <ion-card-content>
-          <ion-button *ngIf="usuario.tipo ==='profesor'" (click)="createClase()" expand="full" fill="solid" color="duoc">
+          <ion-button
+            *ngIf="usuario.tipo ==='profesor'"
+            (click)="createClase()"
+            expand="full"
+            fill="solid"
+            color="duoc"
+          >
             {{ "generar clase" | translate }}
           </ion-button>
-          <ion-button (click)="scanCode()" expand="full" fill="solid" color="primary">
+          <ion-button
+            (click)="scanCode()"
+            expand="full"
+            fill="solid"
+            color="primary"
+          >
             {{ "escanear" | translate }} QR
           </ion-button>
           <ion-label *ngIf="scanedCode" class="">{{scanedCode}}</ion-label>
@@ -52,14 +68,25 @@
                 <ion-label class="">{{ "clases" | translate }}: </ion-label>
               </ion-item>
               <div slot="content" *ngIf="usuario.tipo ==='profesor'">
-                <ion-item lines="full" *ngFor="let aux of clases" (click)="goClase(aux.id)">
-                  <ion-label>{{ "clase" | translate }} {{aux.numero}}</ion-label>
+                <ion-item
+                  lines="full"
+                  *ngFor="let aux of clases"
+                  (click)="goClase(aux.id)"
+                >
+                  <ion-label
+                    >{{ "clase" | translate }} {{aux.numero}}</ion-label
+                  >
                   <ion-label slot="end">{{ aux.fecha }}</ion-label>
                 </ion-item>
               </div>
-              <div slot="content" *ngIf="usuario.tipo ==='alumno' || usuario.tipo ==='admin'">
+              <div
+                slot="content"
+                *ngIf="usuario.tipo ==='alumno' || usuario.tipo ==='admin'"
+              >
                 <ion-item lines="full" *ngFor="let aux of clases">
-                  <ion-label>{{ "clase" | translate }} {{aux.numero}}</ion-label>
+                  <ion-label
+                    >{{ "clase" | translate }} {{aux.numero}}</ion-label
+                  >
                   <ion-label slot="end">{{ aux.fecha }}</ion-label>
                 </ion-item>
               </div>
@@ -67,12 +94,21 @@
           </ion-accordion-group>
         </ion-card-content>
       </ion-card>
-      <div id="map" class="ion-margin">
-      </div>
+        <ion-icon name="close-circle" (click)="setOpen(true)"></ion-icon>
     </div>
   </div>
-  
-       
-      
-
+  <ion-modal #modal [isOpen]="isModalOpen">
+    <ng-template>
+      <ion-toolbar>
+        <ion-title>error</ion-title>
+        <ion-buttons slot="end">
+          <ion-button color="light" (click)="setOpen(false)">{{ "cerrar" | translate }}</ion-button>
+        </ion-buttons>
+      </ion-toolbar>
+      <div class="mapa-container">
+        <div id="mapGeo">
+        </div>
+      </div>
+    </ng-template>
+  </ion-modal>
 </ion-content>
