--- a/src/app/pages/administracion/admin-seccion/admin-seccion.page.html
+++ b/src/app/pages/administracion/admin-seccion/admin-seccion.page.html
@@ -16,34 +16,18 @@
         </ion-item>
         <ion-item lines="full">
           <ion-label color="duoc" position="floating">{{ "nombre seccion" | translate }}: </ion-label>
-          <ion-input formControlName="nombre" type="text" placeholder="ingrese nombre completo"></ion-input>
+          <ion-input formControlName="nombre" type="text" placeholder="ingrese nombre"></ion-input>
         </ion-item>
-        <ion-item lines="full">
-          <ion-label color="duoc" position="floating">{{ "profesor" | translate }}: </ion-label>
-          <ion-input formControlName="profesor" type="text" placeholder="ingrese id profesor"></ion-input>
+        <ion-item>
+          <ion-select placeholder="Seleccione profesor" formControlName="profesor" [compareWith]="compareWith">
+            <ion-select-option *ngFor="let p of profesores" [value]="p">{{p.nom_completo}}</ion-select-option>
+          </ion-select>
         </ion-item>
-        <ion-accordion-group>
-          <ion-accordion>
-            <ion-item lines="full" slot="header" color="light">
-              <ion-label class="">{{ "alumnos" | translate }}: </ion-label>
-            </ion-item>
-            <div class="ion-padding" slot="content">
-              <ion-item>
-                <ion-label color="duoc">{{ "alumno" | translate }}: </ion-label>
-                <ion-input placeholder="ingrese id alumno" type="text"  [(ngModel)]="newAlumno"
-                [ngModelOptions]="{standalone: true}"></ion-input>  
-                <ion-icon color="success" slot="end" name="person-add-outline" (click)="agregarAlumno()"></ion-icon>
-              </ion-item>
-             <ion-list>
-              <ion-title>{{ "lista" | translate }} {{ "alumnos" | translate }}</ion-title>
-                <ion-item lines="full" *ngFor="let aux of alumnos">
-                  <ion-label>{{ aux }}</ion-label>
-                  <ion-icon color="danger" slot="end" name="trash-outline" (click)="eliminarAlumno(aux)"></ion-icon>
-                </ion-item>
-              </ion-list>
-            </div>
-          </ion-accordion>
-        </ion-accordion-group>
+        <ion-item>
+          <ion-select  placeholder="Seleccione alumno" formControlName="alumno" [compareWith]="compareWith" [multiple]="true">
+            <ion-select-option *ngFor="let a of alumnos" [value]="a">{{a.nom_completo}}</ion-select-option>
+          </ion-select>
+        </ion-item>
         <ion-item lines="full">
           <ion-label color="duoc" position="floating">{{ "sigla" | translate }}: </ion-label>
           <ion-input  formControlName="sigla" placeholder="005D" type="text"></ion-input>
